# cpp-server

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.client  Dockerfile.server  Dockerfile.web  README.md  deploy.sh  dev-start.sh  dev-stop.sh  docker-compose.override.yml.example  docker-compose.yml  generate-secrets.sh  nginx.conf  prod-start.sh  prod-stop.sh  test-services.sh
.github/workflows/: deploy.yml
client/: .dockerignore  .env.example  bots.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: ConfigManager.ts  EntityTypes.ts  GameClient.ts  HomeScreen.ts  Interpolator.ts  Renderer.ts  TerrainGenerator.ts  World.ts  index.ts
client/tests/: bots.js  spambots.js
include/: Game.hpp  GameServer.hpp  SocketServer.hpp
include/client/: Client.hpp
include/cppfun/: Game.hpp  (+2 more)
scripts/: generate-secrets.sh
server/: .dockerignore  .env.example  .gitignore  CMakeLists.txt  build.sh  game_config.json  vcpkg.json
server/include/: Game.hpp  GameConfig.hpp  GameServer.hpp  RaycastSystem.hpp  ServerRegistration.hpp  SocketServer.hpp  Systems.hpp  VolcanicWorld.hpp  World.hpp  WorldGenerator.hpp  WorldGeneratorConstants.hpp
server/include/client/: Client.hpp
server/include/common/: enums.hpp
server/include/ecs/: EntityManager.hpp  GunFactory.hpp  components.hpp
server/include/packet/buffer/: PacketReader.hpp  PacketWriter.hpp
server/include/physics/: CollisionHelpers.hpp  PhysicsWorld.hpp
server/include/util/: PerlinNoise.hpp  Vec2.hpp  types.hpp  units.hpp
server/src/: GameServer.cpp  RaycastSystem.cpp  ServerRegistration.cpp  SocketServer.cpp  Systems.cpp  VolcanicWorld.cpp  World.cpp  WorldGenerator.cpp  main.cpp
server/src/client/: Client.cpp
server/src/ecs/: EntityManager.cpp
server/src/packet/buffer/: PacketReader.cpp  PacketWriter.cpp
server/src/physics/: PhysicsWorld.cpp
server/src/util/: PerlinNoise.cpp  units.cpp
src/: Game.cpp  GameServer.cpp  SocketServer.cpp  Systems.cpp  main.cpp
web/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  test-api.sh
(+92 files in other folders)
